...
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N9h-pN-yEY" userLabel="Button View">
                                        <rect key="frame" x="0.0" y="538" width="343" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fyg-zb-GaM">
                                                <rect key="frame" x="86" y="15" width="171.5" height="30"/>
                                                <state key="normal" title="Registrar vehículo"/>
                                                <connections>
                                                    <action selector="registerVehicle:" destination="9pv-A4-QxB" eventType="touchUpInside" id="bW8-ff-UWP"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
...
                            <constraint firstItem="4Iy-GS-AdN" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="JfZ-gV-SaA"/>
                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="4Iy-GS-AdN" secondAttribute="bottom" id="c01-gt-bly"/>
                            <constraint firstItem="4Iy-GS-AdN" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="mA6-u0-J7g"/>
                            <constraint firstAttribute="trailingMargin" secondItem="4Iy-GS-AdN" secondAttribute="trailing" id="tGM-rd-3kV"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Registrar" image="add-vehicle-icon" id="acW-dT-cKf" userLabel="Listar"/>
                    <connections>
                        <outlet property="cylinderTextField" destination="CUR-Hu-sHi" id="xmY-iG-Tre"/>
                        <outlet property="cylinderView" destination="pjc-Ny-ARF" id="PZ0-Pc-5A5"/>
                        <outlet property="ownerTextField" destination="xB1-7t-O4o" id="xnI-pR-EJe"/>
                        <outlet property="plateTextField" destination="fpW-Cz-YFv" id="cMZ-8g-Yrv"/>
                        <outlet property="registerButton" destination="Fyg-zb-GaM" id="MF7-Pp-lwi"/>
...
                            <constraint firstItem="6Up-18-BSe" firstAttribute="top" secondItem="cyT-5I-BQN" secondAttribute="bottom" id="8qg-kd-eiv"/>
                            <constraint firstAttribute="trailingMargin" secondItem="6Up-18-BSe" secondAttribute="trailing" id="FlN-oz-Ul9"/>
                            <constraint firstItem="6Up-18-BSe" firstAttribute="leading" secondItem="n0x-cV-8Lw" secondAttribute="leadingMargin" id="hGx-SS-BWu"/>
                            <constraint firstItem="LgK-Xn-qpG" firstAttribute="top" secondItem="6Up-18-BSe" secondAttribute="bottom" id="hxb-nM-XQT"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Eliminar" image="delete-vehicle-icon" id="CeW-S8-rbz" userLabel="Eliminar"/>
                    <connections>
                        <outlet property="deleteButton" destination="uaD-a7-L1z" id="oaC-B5-ViP"/>
                        <outlet property="descriptionLabel" destination="Cnt-w3-VCo" id="rqL-AV-FYR"/>
                        <outlet property="plateTextField" destination="pG6-AM-RJ2" id="JVj-4m-BA9"/>
                        <outlet property="titleLabel" destination="JxU-fs-4lc" id="kpg-HH-1C3"/>
                    </connections>
...
                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Mateo Gutiérrez Díaz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="DJb-Ap-vZK">
                                                                            <rect key="frame" x="0.0" y="0.0" width="114.5" height="22"/>
                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                            <nil key="textColor"/>
                                                                            <nil key="highlightedColor"/>
                                                                        </label>
                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Carro" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dNN-yL-3a1">
                                                                            <rect key="frame" x="114.5" y="0.0" width="114" height="22"/>
                                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                            <nil key="textColor"/>
                                                                            <nil key="highlightedColor"/>
                                                                        </label>
                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ITR 564" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rcO-1M-KTH">
...
                            <constraint firstItem="5UA-Ml-1Km" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" id="0Bw-bI-SSa"/>
                            <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="5UA-Ml-1Km" secondAttribute="bottom" id="IqB-Iz-iox"/>
                            <constraint firstItem="5UA-Ml-1Km" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leadingMargin" id="Xmt-Lj-ttc"/>
                            <constraint firstAttribute="trailingMargin" secondItem="5UA-Ml-1Km" secondAttribute="trailing" id="k6v-ZH-QjU"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Vehículos" image="show-vehicles-icon" id="cPa-gy-q4n" userLabel="Registrar"/>
                    <connections>
                        <outlet property="tableView" destination="E7Z-bS-tIh" id="sKx-aU-qpO"/>
                        <outlet property="titleViewLabel" destination="2Pw-Iw-nbo" id="Grp-vd-NEt"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
...
